Data Linked & Alignment Fixed

--- a/src/components/DishBroadBar/dishBB.scss
+++ b/src/components/DishBroadBar/dishBB.scss
@@ -16,9 +16,9 @@
 .dishB-cat{
   position:relative;
   width:7px;
-  height: 6.13px;
-  bottom: 190px;
-  right: -10px;
+  height: 7px;
+  bottom: 140px;
+  right: -9px;
   border-radius:60%;
   border: 3px solid ;
   
